--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   <section id="home">
     <h1>Welcome to My Portfolio</h1>
     <p>My name is Rafi Aditya Aka RapliVX In Github</p>
-    <img src="photo_2025-11-08_18-29-47.jpg" alt="Placeholder" width="300">
+    <img src="image/image.png" alt="Placeholder" width="300">
   </section>
 
   <section id="aboutme">
