--- a/index.html
+++ b/index.html
@@ -1,146 +1,649 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Portofolio</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>MY PORTOFOLIO</title>
 
-  <style>
-    body {
-      font-family: "Poppins", Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background: #f7f9fc;
-      color: #333;
-    }
+<style>
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
 
-    /* Navbar */
-    .navbar {
-      background: #1e88e5;
-      position: sticky;
-      top: 0;
-      z-index: 10;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-      padding: 10px 0;
-    }
-    .navbar ul {
-      list-style: none;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-    }
-    .navbar a {
-      text-decoration: none;
-      color: #fff;
-      font-weight: 600;
-    }
+html{
+    scroll-behavior:smooth;
+}
 
-    /* Sections */
-    section {
-      padding: 50px 20px;
-      max-width: 900px;
-      margin: 30px auto;
-      text-align: center;
-      background: rgba(255, 255, 255, 0.4);
-      border-radius: 15px;
-      backdrop-filter: blur(10px);
-      -webkit-backdrop-filter: blur(10px);
-      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
-    }
-    h1, h2 {
-      margin-bottom: 15px;
-    }
+body{
+    background: #000;
+    overflow-x: hidden;
+    cursor: none !important;
+}
 
-    /* Gallery */
-    .gallery-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-      gap: 10px;
-      margin-top: 20px;
-    }
-    .gallery-grid img {
-      width: 100%;
-      border-radius: 8px;
-    }
+a:hover, button:hover, [role="button"]:hover, input:hover, textarea:hover {
+    cursor: none !important;
+}
 
-    /* Contact */
-    #contactme ul {
-      list-style: none;
-      padding: 0;
-      display: flex;
-      justify-content: center;
-      gap: 15px;
-      flex-wrap: wrap;
-    }
-    #contactme a {
-      text-decoration: none;
-      color: #1e88e5;
-      font-weight: 600;
-    }
-      img { border-radius: 15px; }
-  </style>
+/* Animated GIF cursor */
+.cursor-gif {
+    position: fixed;
+    width: 40px;          /* sesuaikan ukuran GIF */
+    height: 40px;
+    pointer-events: none; /* supaya tidak menghalangi klik */
+
+    background: url('image/curcyrene.gif') no-repeat center / contain;
+    
+    transform: translate(-50%, -50%);
+    z-index: 9999;
+
+    /* smooth follow */
+    transition: transform .05s linear;
+}
+
+/* LIVE WALLPAPER */
+.hero{
+    position: relative;
+    height: 100vh;
+}
+
+.hero::after{
+    content: "";
+    position: absolute;
+    bottom: -1px;
+    left: 0;
+    width: 100%;
+    height: 230px;
+    background: linear-gradient(
+        to bottom,
+        rgba(0,0,0,0) 25%,
+        rgba(199,169,255,0.55) 70%,
+        #ffffff 100%
+    );
+    z-index: 1;
+    pointer-events: none;
+}
+
+video.bg-video{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    filter: brightness(55%);
+    z-index: -1;
+}
+
+/* FLOATING INFO BOX */
+.info-box{
+    position: absolute;
+    top: 50%;
+    left: 5%;
+    transform: translateY(-50%);
+    width: 45%;
+    padding: 30px;
+    background: rgba(255,255,255,0.08);
+    backdrop-filter: blur(18px);
+    border-radius: 24px;
+    border: 1px solid rgba(255,255,255,0.2);
+    box-shadow: 0 5px 45px rgba(0,0,0,0.5);
+    color: #fff;
+    z-index: 2;
+}
+
+#home{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    text-align: left;
+}
+
+#home img{
+    width: 85px;
+    height: 85px;
+    border-radius: 50%;
+    border: 3px solid rgba(255,255,255,0.4);
+}
+
+#aboutme{
+    margin-top: 25px;
+}
+
+#aboutme p{
+    opacity: 0.9;
+    margin: 5px 0;
+}
+
+/* BUTTON (updated) */
+.more-btn{
+    width: 55px;
+    height: 55px;
+    border-radius: 50%;
+    background: rgba(255,255,255,0.3);
+    border: none;
+    backdrop-filter: blur(8px);
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 85px; /* posisi tombol */
+
+    cursor: pointer;
+    transition: .3s;
+    z-index: 2;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.more-btn:hover{
+    transform: translateX(-50%) scale(1.15);
+}
+
+/* ICON inside the button */
+.more-btn .icon-down{
+    width: 24px;
+    height: 24px;
+    opacity: 0.9;
+    pointer-events: none;
+
+    transform: translateY(-3px); /* 👉 naik sedikit */
+}
+
+
+/* PROJECT SECTION */
+.projects{
+    background: #fff;
+    padding: 100px 60px;
+    min-height: 100vh;
+    color: #000;
+    position: relative;
+    margin-top: -40px;
+    z-index: 0;
+    text-align: center;
+}
+
+/* LIST POSITIONING */
+.project-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 25px;
+}
+
+/* PROJECT CARD (lebih besar & menyatu) */
+.project-item {
+    width: 90%;
+    max-width: 800px;
+    background: #ffffff;
+    padding: 0;
+    border-radius: 20px;
+    box-shadow: 0 10px 35px rgba(0,0,0,0.12);
+    overflow: hidden;
+    transition: transform .2s ease;
+}
+
+.project-item:hover {
+    transform: translateY(-3px);
+}
+
+/* TITLE */
+.project-title {
+    width: 100%;
+    padding: 22px 25px;
+    background: #f3f3f3;
+    border: none;
+    font-size: 20px;
+    font-weight: 600;
+    cursor: pointer;
+    text-align: center;
+}
+
+/* Project section title (same style as gallery) */
+.projects h2 {
+    font-size: 40px;
+    font-weight: 700;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    margin-bottom: 40px;
+
+    padding: 12px 40px;
+    display: inline-block;
+
+    /* Blur glass like slider button */
+    background: rgba(255, 255, 255, 0.22);
+    border: 1px solid rgba(255, 255, 255, 0.35);
+    backdrop-filter: blur(14px);
+    -webkit-backdrop-filter: blur(14px);
+
+    border-radius: 50px; /* pill shape */
+    color: #000;
+    box-shadow: 0 5px 25px rgba(0,0,0,0.08);
+    transition: .25s ease;
+}
+
+.projects h2:hover {
+    transform: scale(1.07);
+    box-shadow: 0 8px 32px rgba(0,0,0,0.15);
+}
+
+
+/* CONTENT WITH SMOOTH SLIDE */
+.project-content {
+    max-height: 0;
+    overflow: hidden;
+    padding: 0 25px;
+    background: #f3f3f3;
+    transition: max-height 0.45s ease, padding 0.3s ease;
+}
+
+.project-content p {
+    padding: 18px 0 25px 0;
+    margin: 0;
+}
+
+/* ACTIVE CLASS WHEN OPEN */
+.project-content.open {
+    padding: 18px 25px 25px 25px;
+    max-height: 300px; /* cukup untuk 1 paragraf */
+}
+
+
+/* SHAPES KIRI & KANAN */
+.corner-shape-left,
+.corner-shape-right{
+    position: absolute;
+    top: -40px;
+    width: 50%;
+    height: 90px;
+    background: #ffffff;
+    z-index: -1;
+}
+
+.corner-shape-left{
+    left: 0;
+    border-radius: 40px 0 0 0;
+}
+
+.corner-shape-right{
+    right: 0;
+    border-radius: 0 40px 0 0;
+}
+
+.project-list{
+    font-size: 18px;
+    line-height: 1.8;
+    margin-top: 10px;
+    padding-left: 25px;
+}
+
+.project-list li{
+    margin-bottom: 8px;
+}
+
+
+/* Gallery section */
+.gallery {
+    width: 100%;
+    min-height: 600px;
+    background: #ffffff; /* full white */
+    position: relative;
+    padding: 80px 0 60px;
+    text-align: center;
+    overflow: hidden;
+}
+
+/* Gallery title blur aesthetic */
+.gallery h2 {
+    font-size: 40px;
+    font-weight: 700;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    margin-bottom: 40px;
+
+    padding: 12px 40px;
+    display: inline-block;
+
+    /* Blur glass like slider button */
+    background: rgba(255, 255, 255, 0.22);
+    border: 1px solid rgba(255, 255, 255, 0.35);
+    backdrop-filter: blur(14px);
+    -webkit-backdrop-filter: blur(14px);
+
+    border-radius: 50px; /* pill shape */
+    color: #000;
+    box-shadow: 0 5px 25px rgba(0,0,0,0.08);
+    transition: .25s ease;
+}
+
+.gallery h2:hover {
+    transform: scale(1.07);
+    box-shadow: 0 8px 32px rgba(0,0,0,0.15);
+}
+
+/* Slider container */
+.slider-container {
+    position: relative;
+    width: 70%;
+    height: 450px;
+    margin: auto;
+    overflow: hidden;
+}
+
+/* Only show one image at a time */
+.slider {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+.slide {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transition: opacity .5s ease-in-out;
+}
+
+.slide.active {
+    opacity: 1;
+}
+
+.slide img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 20px;
+}
+
+/* Glassmorphism Arrow Buttons */
+.slide-btn {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    backdrop-filter: blur(14px);
+    background: rgba(255, 255, 255, 0.06);
+    border: 1px solid rgba(255, 255, 255, 0.15);
+    padding: 14px;
+    border-radius: 15px;
+    box-shadow: 0 4px 28px rgba(0,0,0,0.25);
+    cursor: pointer;
+    z-index: 99;
+    transition: all .25s ease-in-out;
+}
+
+.slide-btn img {
+    width: 45px;
+}
+
+.prev { left: 10px; }
+.next { right: 10px; }
+
+/* CONTACT SECTION */
+.contact-section {
+    width: 100%;
+    background: #ffffff;
+    padding: 90px 0;
+    text-align: center;
+}
+
+/* Contact title like gallery/project title */
+.contact-section h2 {
+    font-size: 40px;
+    font-weight: 700;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    margin-bottom: 50px;
+
+    padding: 12px 40px;
+    display: inline-block;
+
+    background: rgba(255, 255, 255, 0.22);
+    border: 1px solid rgba(255, 255, 255, 0.35);
+    backdrop-filter: blur(14px);
+    -webkit-backdrop-filter: blur(14px);
+
+    border-radius: 50px;
+    color: #000;
+    box-shadow: 0 5px 25px rgba(0,0,0,0.08);
+    transition: .25s ease;
+}
+
+.contact-section h2:hover {
+    transform: scale(1.07);
+    box-shadow: 0 8px 32px rgba(0,0,0,0.15);
+}
+
+/* BIGGER CONTACT BOX */
+.contact-box {
+    margin: 0 auto;
+    width: 70%;              /* <-- lebih besar */
+    max-width: 900px;        /* <-- lebih besar */
+    padding: 40px 50px;
+
+    background: rgba(255,255,255,0.55);
+    border-radius: 22px;
+    box-shadow: 0 8px 40px rgba(0,0,0,0.1);
+    backdrop-filter: blur(12px);
+    border: 1px solid rgba(255,255,255,0.4);
+
+    font-size: 20px;
+    line-height: 1.8;
+    color: #000;
+}
+
+/* Social links horizontal */
+.contact-socials {
+    list-style: none;
+    padding: 0;
+    margin-top: 30px;
+
+    display: flex;
+    justify-content: center;
+    gap: 25px;          /* jarak antar item */
+    flex-wrap: wrap;    /* biar responsif di HP */
+}
+
+.contact-socials li a {
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 20px;
+    padding: 10px 18px;
+
+    background: rgba(255,255,255,0.4);
+    border: 1px solid rgba(255,255,255,0.5);
+    backdrop-filter: blur(8px);
+
+    border-radius: 12px;
+    color: #000;
+    box-shadow: 0 4px 18px rgba(0,0,0,0.08);
+    transition: .3s ease;
+}
+
+.contact-socials li a:hover {
+    transform: translateY(-4px);
+    box-shadow: 0 6px 24px rgba(0,0,0,0.15);
+    opacity: .9;
+}
+
+
+</style>
 </head>
+
 <body>
-  <div class="navbar">
-    <ul>
-      <li><a href="#home">Home</a></li>
-      <li><a href="#aboutme">About Me</a></li>
-      <li><a href="#portofolio">Portofolio</a></li>
-      <li><a href="#gallery">Gallery</a></li>
-      <li><a href="#contactme">Contact Me</a></li>
-    </ul>
-  </div>
 
-  <section id="home">
-    <h1>Welcome to My Portfolio</h1>
-    <p>My name is Rafi Aditya Aka RapliVX In Github</p>
-    <img src="image/image.png" alt="Placeholder" width="300">
-  </section>
+<div class="cursor-gif"></div>
 
-  <section id="aboutme">
-    <h2>About Me</h2>
-    <p>I am a web developer with a passion for clean and functional design.</p>
-    <p>I am Weebs And I USE ARCH BTW</p>
-    <p>Evernight is so beautiful BTW</p>
-  </section>
+<div class="hero">
+    <video autoplay loop muted class="bg-video">
+        <source src="image/cyrene-wings-of-bloom.3840x2160.mp4" type="video/mp4">
+    </video>
 
-  <section id="portofolio">
-    <h2>Project</h2>
-    <ul style="text-align:left; max-width:400px; margin:auto;">
-      <li>Website for a local business</li>
-      <li>Android Kernel Developer</li>
-      <li>Personal blog</li>
-      <li>HyperOS 3 Port For MiAtoll (Project Amphoreus)</li>
-    </ul>
-  </section>
+    <div class="info-box">
+        <section id="home">
+            <img src="image/image.png" alt="Profile">
+            <div>
+                <h1>Welcome to My Portfolio</h1>
+                <p>My name is Rafi Aditya Aka RapliVX in Github</p>
+            </div>
+        </section>
 
-  <section id="gallery">
-    <h2>Gallery</h2>
-    <div class="gallery-grid">
-      <img src="image/images.jpg" alt="Image 1">
-      <img src="image/ado.jpg" alt="Image 2">
-      <img src="image/tomori-kusunoki-5be9934fe28c7p.jpg" alt="Image 3">
-      <img src="image/yoko-hikasa-5b4c024a72510p.jpg" alt="Image 4">
+        <section id="aboutme">
+            <h2>About Me</h2>
+            <p>I am a web developer with a passion for clean and functional design.</p>
+            <p>I am a Weeb And I USE ARCH BTW</p>
+            <p>Cyrene is so beautiful BTW</p>
+        </section>
     </div>
-  </section>
 
-  <section id="contactme">
+    <button class="more-btn" onclick="document.getElementById('projects').scrollIntoView({behavior:'smooth'})">
+    <img src="image/bawaaah.svg" alt="scroll down icon" class="icon-down">
+    </button>
+</div>
+
+<section id="projects" class="projects">
+    <div class="corner-shape-left"></div>
+    <div class="corner-shape-right"></div>
+
+   <h2>My Projects</h2>
+
+    <div class="project-list">
+
+        <div class="project-item">
+            <button class="project-title">Website for a local business</button>
+            <div class="project-content">
+                <p>I Build Web To Support Local Businesses to thrive in the modern era</p>
+            </div>
+        </div>
+
+        <div class="project-item">
+            <button class="project-title">Android Linux Kernel Developer</button>
+            <div class="project-content">
+                <p>I build kernels for Beryllium, MiAtoll, Sweet/Sweet_k6a, Surya/Karna, Lavender and Vince, all Xiaomi phones Heheh</p>
+            </div>
+        </div>
+
+        <div class="project-item">
+            <button class="project-title">Personal blog</button>
+            <div class="project-content">
+                <p>I just made a personal blog for fun, hehehehe</p>
+            </div>
+        </div>
+
+        <div class="project-item">
+            <button class="project-title">HyperOS 3 Port For MiAtoll (Project Amphoreus)</button>
+            <div class="project-content">
+                <p>I ported HyperOS 3 for Miatoll, and its name is Project Amphoreus, it's still in beta and still has lots of bugs.</p>
+            </div>
+        </div>
+
+        <div class="project-item">
+            <button class="project-title">Building Custom ROM Based On AOSP For MiAtoll</button>
+            <div class="project-content">
+                <p>I built a Custom Rom also AOSP for Miatoll, and the Custom Rom that I managed to build is MikuUI-Blooming Based on Android 16, but there are still many bugs in the vendor tree and device tree.</p>
+            </div>
+        </div>
+
+    </div>
+</section>
+
+<div class="gallery">
+    <h2>Gallery</h2>
+    <div class="slider-container">
+        <div class="slider">
+            <div class="slide active">
+                <img src="image/images.jpg">
+            </div>
+            <div class="slide">
+                <img src="image/ado.jpg">
+            </div>
+            <div class="slide">
+                <img src="image/ligus.jpg">
+            </div>
+            <div class="slide">
+                <img src="image/lyrene.jpg">
+            </div>
+        </div>
+
+        <button class="slide-btn prev">
+            <img src="image/back.svg">
+        </button>
+        <button class="slide-btn next">
+            <img src="image/forward.svg">
+        </button>
+    </div>
+</div>
+
+<section id="contactme" class="contact-section">
     <h2>Contact Me</h2>
-    <p>Email: womgirenhjembuten320@gmail.co,</p>
-    <p>Phone: +62 812-XXX-XXXX</p>
-    <p>Address: NGAWI</p>
-    <ul>
-      <li><a href="#">Facebook</a></li>
-      <li><a href="#">Twitter</a></li>
-      <li><a href="#">LinkedIn</a></li>
-      <li><a href="#">Instagram</a></li>
-      <li><a href="https://github.com/RapliVx">Github</a></li>
-    </ul>
-  </section>
+
+    <div class="contact-box">
+        <p><strong>Email:</strong> womgirenhjembuten320@gmail.co</p>
+        <p><strong>Phone:</strong> +62 812-XXX-XXXX</p>
+        <p><strong>Address:</strong> NGAWI</p>
+
+        <ul class="contact-socials">
+            <li><a href="#">Facebook</a></li>
+            <li><a href="#">Twitter</a></li>
+            <li><a href="#">LinkedIn</a></li>
+            <li><a href="#">Instagram</a></li>
+            <li><a href="https://github.com/RapliVx">Github</a></li>
+        </ul>
+    </div>
+</section>
+
+
+<script>
+let index = 0;
+const slides = document.querySelectorAll('.slide');
+
+function showSlide(i) {
+    slides.forEach(sl => sl.classList.remove('active'));
+    slides[i].classList.add('active');
+}
+
+document.querySelector('.next').addEventListener('click', () => {
+    index = (index + 1) % slides.length;
+    showSlide(index);
+});
+
+document.querySelector('.prev').addEventListener('click', () => {
+    index = (index - 1 + slides.length) % slides.length;
+    showSlide(index);
+});
+
+// 🚀 Auto slide 5 detik
+setInterval(() => {
+    index = (index + 1) % slides.length;
+    showSlide(index);
+}, 5000);
+
+document.querySelectorAll('.project-title').forEach(button => {
+    button.addEventListener('click', () => {
+
+        const content = button.nextElementSibling;
+
+        // Tutup jika terbuka
+        if (content.classList.contains("open")) {
+            content.classList.remove("open");
+        } 
+        else {
+            content.classList.add("open");
+        }
+
+    });
+});
+
+document.addEventListener("mousemove", function(e) {
+    const cursor = document.querySelector(".cursor-gif");
+    cursor.style.left = e.clientX + "px";
+    cursor.style.top = e.clientY + "px";
+});
+</script>
+
+
 </body>
 </html>
