--- a/index.html
+++ b/index.html
@@ -13,6 +13,25 @@
 
 <div class="cursor-gif"></div>
 
+<nav class="nav">
+    <div class="hamburger-box" id="hamburger">
+
+        <!-- SVG dari folder image/menu.svg -->
+        <div class="icon-svg">
+            <img src="image/menu.svg" alt="menu icon">
+        </div>
+
+        <span class="menu-text">Menu</span>
+    </div>
+
+    <ul class="dropdown" id="dropdown">
+        <li><a href="#home">Home</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#gallery">Gallery</a></li>
+        <li><a href="#contactme">Contact Me</a></li>
+    </ul>
+</nav>
+
 <div class="hero">
     <video autoplay loop muted class="bg-video">
         <source src="image/cyrene-wings-of-bloom.3840x2160.mp4" type="video/mp4">
@@ -86,32 +105,41 @@
     </div>
 </section>
 
-<div class="gallery">
-    <h2>Gallery</h2>
-    <div class="slider-container">
-        <div class="slider">
-            <div class="slide active">
-                <img src="image/images.jpg">
+<section id="gallery">
+
+    <div class="gallery">
+        <h2>Gallery</h2>
+
+        <div class="slider-container">
+
+            <div class="slider">
+                <div class="slide active">
+                    <img src="image/images.jpg">
+                </div>
+                <div class="slide">
+                    <img src="image/ado.jpg">
+                </div>
+                <div class="slide">
+                    <img src="image/ligus.jpg">
+                </div>
+                <div class="slide">
+                    <img src="image/lyrene.jpg">
+                </div>
             </div>
-            <div class="slide">
-                <img src="image/ado.jpg">
-            </div>
-            <div class="slide">
-                <img src="image/ligus.jpg">
-            </div>
-            <div class="slide">
-                <img src="image/lyrene.jpg">
-            </div>
+
+            <button class="slide-btn prev">
+                <img src="image/back.svg">
+            </button>
+
+            <button class="slide-btn next">
+                <img src="image/forward.svg">
+            </button>
+
         </div>
 
-        <button class="slide-btn prev">
-            <img src="image/back.svg">
-        </button>
-        <button class="slide-btn next">
-            <img src="image/forward.svg">
-        </button>
     </div>
-</div>
+
+</section>
 
 <section id="contactme" class="contact-section">
     <h2>Contact Me</h2>
@@ -130,6 +158,40 @@
         </ul>
     </div>
 </section>
+
+<div id="music-toggle-btn" class="music-toggle-btn">
+    <img src="image/music.svg" alt="music">
+</div>
+
+<div id="music-player" class="music-floating">
+    
+    <div class="music-header">
+        <img id="music-cover" src="image/cover.jpg" class="music-cover">
+
+        <div class="music-title-box">
+            <div class="music-title">Ripples of Past Reverie</div>
+        </div>
+    </div>
+
+    <!-- PLAY/PAUSE ICON -->
+    <button id="music-play" class="play-btn">
+        <img id="music-icon" src="image/play.svg" alt="Play" width="24" height="24">
+    </button>
+
+    <!-- PROGRESS BAR -->
+    <input type="range" id="music-progress" min="0" max="100" value="0" class="progress-bar">
+
+    <!-- VOLUME -->
+    <label>Volume:</label>
+    <input type="range" id="music-volume" min="0" max="1" step="0.01" value="0.5">
+
+</div>
+
+
+<!-- AUDIO -->
+<audio id="bgm" loop>
+    <source src="audio/HOYO-MiX - Ripples of Past Reverie (English Ver.).flac" type="audio/flac">
+</audio>
 
 <script src="script.js"></script>
 
